finished: finished jcc2d的ae导出工具

--- a/papers/2017-04-15-jcc2d的AE导出动画.md
+++ b/papers/2017-04-15-jcc2d的AE导出动画.md
@@ -1,6 +1,211 @@
 ---
 title: jcc2d的AE导出动画
 date: 2017-04-15
-status: todo
+status: finished
 author: jason82
 ---
+
+### AE导出动画数据
+
+相信大名鼎鼎的[bodymovin][bodymovin]扩展插件大家已经是非常熟悉了，我们可以用这个扩展插件将AE软件制作的透明度动画、仿射变换动画和图形变形动画导出成`json`的格式。并且`bodymovin`还提供了相应的解析器将导出的数据在浏览器上重新还原播放，这对静态的展示动画是一个非常好的解决方案。可以看看`bodymovin`的官方[bodymovin demo][bodymovin-demo]。
+
+但是如果是涉及人机交互的动画可能就不是非常合适了，具体原因如下：
+
+1. 因为我们知道`bodymovin`的`player`只是实现了导出动画的静态还原，在`canvas`渲染方式下我们都没有办法为动画元素加任何交互事件。
+2. 在我们的业务中可能`bodymovin`导出的动画只是我们业务中的一部分，需要将导出的动画融合到项目的原本业务中。例如一个小游戏，在一个`canvas`中需要同时有交互部分和静态动画部分。使用`bodymovin`的`player`没办法和现有的逻辑进行融合。
+3. `bodymovin`的`player`代码体积比较大，很多场景下的引入成本可能比较高，特别是在移动端。
+
+所以实现一个游戏级别的渲染引擎就非常必要了，因为在很多情况下动画只是业务中的一部分，并且动画需要融合到业务逻辑中，但是`bodymovin`的`player`并不能编写复杂的业务逻辑。
+
+### jcc2d解析导出数据
+
+首先[jcc2d][jcc2d]是一个`canvas 2d`的渲染引擎，同时也是一个动画引擎。支持复杂的渲染工作，并且还能为每个渲染的元素实例对象轻松的绑定事件。例如为一个球`ball`绑定点击事件可以如下轻松实现：
+
+```js
+const ball = new JC.Sprite({
+    texture: new JC.Texture('/path/xx.png'),
+});
+
+ball.on('click', function(ev) {
+  // do something
+})
+```
+
+同时也支持`off`、`once`等常用的事件绑定功能。
+
+同时使用[jcc2d][jcc2d]实现一个动画也是非常简单，只需要在每个渲染元素实例对象上调用`animate`方法就好了。例如给一个球`ball`添加一个无限循环、交替播放的动画只需要如下轻松实现：
+
+```js
+
+const ball = new JC.Sprite({
+    texture: new JC.Texture('/path/xx.png'),
+});
+const timeline = ball.animate({
+  from: {x: 100}, // start pose, optional
+  to: {x: 200}, // target pose
+  ease: 'bounceOut', // set a timingfunction
+  repeats: 10, // repeat sometimes
+  delay: 1000, // delay a moment every repeat
+  wait: 1000, // wait a moment to start
+  infinite: true, // want infinite repeats?
+  alternate: true, // repeats with alternate
+  duration: 1000, // duration
+  onUpdate: function(state,rate){}, // onUpdate callback
+  onCompelete: function(){ console.log('end'); } // onCompelete callback
+});
+
+// control animation by timeline
+timeline.pause(); // pause animation progress
+timeline.stop(); // stop animation to end, will trigger onCompelete callback
+timeline.cancle(); // cancle animation right now, will not trigger onCompelete callback
+timeline.restart(); // restart animation progress, use with pause
+timeline.timeScale = 0.5; // set timeScale, get a Slow motion，just like speed * 0.5
+```
+
+[jcc2d][jcc2d]作为一个完整的引擎，要支持`bodymovin`导出的数据其实非常容易。只需要实现一个专门的`parser`来解析导出的数据成[jcc2d][jcc2d]本身的动画数据就好了。
+
+`bodymovin`导出的数据格式描述了每个动画元素的各个属性的关键帧和该动画元素的资源图片和尺寸大小，我们可以先把动画元素创建成[jcc2d][jcc2d]的各类对象。接下来再对各个动画属性进行插值播放，这个可以通过[jcc2d][jcc2d]内建的插值系统来轻松实现。
+
+这样一来我封装了两个工具方法，一个是实现插值的`keyframes`类、一个是用来解析整个`bodymovin`导出数据的`ParserAnimation`方法。解析一个完整的导出数据，具体用法如下：
+
+```js
+const ani = new JC.ParserAnimation({
+  keyframes: data,
+  // fr: 30, // frame rate
+  // infinite: true, // infinite loop
+  // alternate: true, // alternate
+  onUpdate() {},
+  onCompelete() {
+    console.log(this.element);
+  },
+});
+
+// add ani.doc to stage
+stage.adds(ani.doc);
+stage.startEngine(); // start render stage
+```
+
+当你仅仅需要解析数据中的某个动画时，可以如下实现：
+
+```js
+const coin = new JC.Sprite({
+  texture: new JC.Texture('/path/coin.png'),
+});
+coin.keyFrames({
+  ks: data.layers[0], // bodymovin keyframes data
+  fr: 30, // frame rate
+  // infinite: true, // infinite loop
+  // alternate: true, // alternate
+  onUpdate() {},
+  onCompelete() {
+    console.log(this.element);
+  },
+});
+
+// add coin to stage
+stage.adds(coin);
+stage.startEngine(); // start render stage
+```
+
+这样[jcc2d][jcc2d]就支持了`bodymovin`导出的动画数据。
+
+是不是非常方便～
+
+### 周边工具
+
+有些时候我们可能并不需要用`canvas`这么重的一个方案来解决动画，可能我们的需求很轻量。比如说页面中有一个普通的分享按钮，但是设计师花了半天时间专门给它设计了一个非常俏皮的跳跃动画，这个动画我只需要用`CSS3`的`keyframe`来实现就够了，但是我如果去人工的一个百分比一个百分比的去扣的话是很不合理的。
+
+所以我制作了一个基于`bodymovin`导出的动画数据的工具。同样是导出`json`格式的数据，然后利用这个工具直接一条命令就可以生成`keyframe`的关键帧以及元素的基础样式，如下所示：
+
+```css
+
+/**
+ * box-close animation style
+ */
+.box-close-style {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(3.24rem, 5.94rem);
+          transform: translate(3.24rem, 5.94rem);
+  -webkit-transform-origin: 1.85rem 3.32rem;
+          transform-origin: 1.85rem 3.32rem;
+  -webkit-animation: box-close-ani 2533ms linear infinite;
+          animation: box-close-ani 2533ms linear infinite;
+}
+@-webkit-keyframes box-close-ani {
+  0% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+    opacity: 1;
+  }
+  1.32% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+    opacity: 1;
+  }
+  7.89% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0.38;
+  }
+  10.53% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0.13;
+  }
+  11.84% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0;
+  }
+}
+@keyframes box-close-ani {
+  0% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+    opacity: 1;
+  }
+  1.32% {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+    opacity: 1;
+  }
+  7.89% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0.38;
+  }
+  10.53% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0.13;
+  }
+  11.84% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1, 0.95);
+            transform: scale(1, 0.95);
+    opacity: 0;
+  }
+}
+```
+
+并且自动通过`postcss`的插件加上了相应的浏览器前缀，同时还支持将`px`单位转换成`rem`单位。
+
+感兴趣的可以查看这个工具[TODO][TODO]
+
+
+
+[bodymovin]: https://github.com/bodymovin/bodymovin	"bodymovin"
+[bodymovin-demo]: http://codepen.io/airnan/pen/PqjwYM	"bodymovin demo"
+[jcc2d]: https://github.com/jasonChen1982/jcc2d	"jcc2d"
+[TODO]: TODO	"TODO"
