--- a/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
+++ b/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
@@ -1,7 +1,7 @@
 ---
-title: 微信分享SPA应用小图标不能显示的坑
+title: 微信分享SPA应用小图标不能显示问题
 date: 2017-05-03
-status: doing
+status: finished
 ---
 
 ### 问题
@@ -10,11 +10,11 @@ status: doing
 
 分享失败的图片是：
 
-![wxsharefail][微信分享失败]
+![微信分享失败][微信分享失败]
 
 分享成功的图片是：
 
-![wxsharefail][微信分享成功]
+![微信分享成功][微信分享成功]
 
 
 
