--- a/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
+++ b/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
@@ -71,11 +71,11 @@ status: finished
 2. 在vue项目中注入配置信息, 以下代码已把遇到的坑进行了说明。
 
     ```javascript
-   // vue 项目入口文件 main.js
-   var ua = navigator.userAgent;
+    // vue 项目入口文件 main.js
+    var ua = navigator.userAgent;
 
-   // 对于变化url的SPA的web app可在每次url变化时进行调用
-   router.beforeEach(function(transition) {
+    // 对于变化url的SPA的web app可在每次url变化时进行调用
+    router.beforeEach(function(transition) {
        if(/micromessenger/i.test(ua)){
            getAjax('/jssdk', function(response){
                !response.appId && (response = JSON.parse(response));
@@ -105,17 +105,17 @@ status: finished
            });
        }
        transition.next();
-   })
+    })
 
-   function bindWxShare(obj) {
+    function bindWxShare(obj) {
        wx.onMenuShareTimeline(obj)
        wx.onMenuShareAppMessage(obj)
        wx.onMenuShareQQ(obj)
        wx.onMenuShareQZone(obj)
-   }
+    }
 
-   // 按需加载jssdk资源
-   if(/micromessenger/i.test(navigator.userAgent)){
+    // 按需加载jssdk资源
+    if(/micromessenger/i.test(navigator.userAgent)){
        var head = document.getElementsByTagName('head')[0];
        var script = document.createElement('script');
        script.src = '//res.wx.qq.com/open/js/jweixin-1.2.0.js';
@@ -133,7 +133,7 @@ status: finished
            });
 
        }
-   } else {
+    } else {
        new Vue({
            el: '#app',
            router,
@@ -144,35 +144,36 @@ status: finished
                )
            }
        });
-   }
+    }
     ```
 
-   在详情页的detail.js中
+     在详情页的detail.js中
 
-   ```javascript
-   // detail.js
+    ```javascript
+     // detail.js
 
-   // 向后台请求详情页数据，成功时调取的函数
-   function detailData(response) {
-     ...
-     ...
-     var info = response.info;
-     if(/micromessenger/i.test(navigator.userAgent) ){
-         var _this = this;
-         // 确保分享的图片都是设置的图片，而不是微信默认抓取的
-         wx.ready(function(){
-             bindWxShare({
-                 title: info.title,
-                 link: window.location.href,
-                 imgUrl: info.shareImg
-             })
-         });
+     // 向后台请求详情页数据，成功时调取的函数
+     function detailData(response) {
+       ...
+       ...
+       var info = response.info;
+       if(/micromessenger/i.test(navigator.userAgent) ){
+           var _this = this;
+           // 确保分享的图片都是设置的图片，而不是微信默认抓取的
+           wx.ready(function(){
+               bindWxShare({
+                   title: info.title,
+                   link: window.location.href,
+                   imgUrl: info.shareImg
+               })
+           });
+       }
+       ...
+       ...
      }
-     ...
-     ...
-   }
-   ```
+    ```
 
+    ​
 
 
 4. **!!!**  还有一个狠重要的一点，由于是SPA应用, 页面的地址路径中会包括`#` 号，所以首页的实际路径为 `http://www.test.com/#/index` 。经过测试，如果在微信对话框中直接输入 `www.test.com`， 并进行访问，在andriod、ios 系统的进行分享时会出现异常。所以需要强制用包含`#` 号的链接进行访问。
@@ -197,6 +198,6 @@ status: finished
 
    ​
 
-[微信分享失败]: https://jasonchen1982.github.io/blog/source/wxshare/wxshare1.png	"微信分享失败"
-[微信分享成功]: https://jasonchen1982.github.io/blog/source/wxshare/wxshare2.png	"微信分享成功"
-[JS-SDK]: https://mp.weixin.qq.com/wiki	"JS-SDK"
+   [微信分享失败]: https://jasonchen1982.github.io/blog/source/wxshare/wxshare1.png&quot;微信分享失败&quot;
+   [微信分享成功]: https://jasonchen1982.github.io/blog/source/wxshare/wxshare2.png&quot;微信分享成功&quot;
+   [JS-SDK]: https://mp.weixin.qq.com/wiki&quot;JS-SDK&quot;
