--- a/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
+++ b/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
@@ -200,4 +200,4 @@ status: finished
 
    [微信分享失败]: https://jasonchen1982.github.io/blog/source/wxshare/wxshare1.png	"微信分享失败"
    [微信分享成功]: https://jasonchen1982.github.io/blog/source/wxshare/wxshare2.png	"微信分享成功"
-   [JS-SDK]: https://mp.weixin.qq.com/wiki&quot;JS-SDK&quot;
+   [JS-SDK]: https://mp.weixin.qq.com/wiki	"JS-SDK"
