--- a/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
+++ b/papers/2017-05-03-微信分享SPA应用小图标不能显示问题.md
@@ -38,11 +38,11 @@ status: finished
 
    ```nginx
    server {
-           listen       80;
-           server_name www.test.com;
-     		location / {
-               proxy_pass http://127.0.0.1:8000;
-           }
+     listen       80;
+     server_name www.test.com;
+     location / {
+       	proxy_pass http://127.0.0.1:8000;
+     }
    }
    ```
 
@@ -52,9 +52,9 @@ status: finished
 
    a. 在charles 的 `proxy` 选项中设置http代理端口号，默认为 `8888`, 并且开启代理。
 
-   b. 确保手机上链接的`wifi`和PC 上的网络在同一个局域网。
+   b. 确保手机上链接的wifi和PC 上的网络在同一个局域网。
 
-   c. 在手机上的 ` 网络设置` 中 设置`http代理` ， 填写 PC 端的 `IP`， 端口号为先前填写的端口号，，默认为 `8888`。
+   c. 在手机上的 ` 网络设置` 中 设置`http代理` ， 填写 PC 端的 IP， 端口号为先前填写的端口号，，默认为 `8888`。
 
    d. 在微信中访问`www.test.com`。
 
@@ -80,25 +80,25 @@ status: finished
            getAjax('/jssdk', function(response){
                !response.appId && (response = JSON.parse(response));
                wx.config({
-                 	// 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-                   debug: true, 
-                   appId: response.appId,
-                   timestamp: response.timestamp,
-                   nonceStr: response.nonceStr,
-                   signature: response.signature,
-                   jsApiList: ['onMenuShareTimeline', 'onMenuShareAppMessage', 'onMenuShareQQ', 'onMenuShareQZone']
+                 // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                 debug: true, 
+                 appId: response.appId,
+                 timestamp: response.timestamp,
+                 nonceStr: response.nonceStr,
+                 signature: response.signature,
+                 jsApiList: ['onMenuShareTimeline', 'onMenuShareAppMessage', 'onMenuShareQQ', 'onMenuShareQZone']
                });
-              	// 产品需求：详细页面的分享图片需要设置成后台返回的指定图片，在这里分享详细页面不设置成默认的logo
-               if(transition.to.name != 'detail'){
-                 	// Tips: 虽然文档中已说明 `对于用户触发时才调用的接口，则可以直接调用，不需要放在ready函数中`。 但是经过测试，分享的事件绑定还是需要在wx.ready 方法中，确保分享的图片都是设置的图片，而不是微信默认抓取的。
-                   wx.ready(function(){
-                      // 默认用logo。Tips: 图片建议用jpg格式，亲测有效，png格式无效。
-                      var wxShareImg = 'http://www.test.com/assets/images/logo.jpg';
-                       bindWxShare({
-                           title: document.title,
-                           link: window.location.href,
-                           imgUrl: wxShareImg,
-                       })
+             	// 产品需求：详细页面的分享图片需要设置成后台返回的指定图片，在这里分享详细页面不设置成默认的logo
+             	if(transition.to.name != 'detail'){
+                  	// Tips: 虽然文档中已说明 `对于用户触发时才调用的接口，则可以直接调用，不需要放在ready函数中`。 但是经过测试，分享的事件绑定还是需要在wx.ready 方法中，确保分享的图片都是设置的图片，而不是微信默认抓取的。
+                  	wx.ready(function(){
+                      	// 默认用logo。Tips: 图片建议用jpg格式，亲测有效，png格式无效。
+                      	var wxShareImg = 'http://www.test.com/assets/images/logo.jpg';
+                      	bindWxShare({
+                           	title: document.title,
+                           	link: window.location.href,
+                           	imgUrl: wxShareImg,
+                       	})
                    })
                }
                
@@ -108,10 +108,10 @@ status: finished
     })
 
     function bindWxShare(obj) {
-       wx.onMenuShareTimeline(obj)
-       wx.onMenuShareAppMessage(obj)
-       wx.onMenuShareQQ(obj)
-       wx.onMenuShareQZone(obj)
+      	wx.onMenuShareTimeline(obj)
+        wx.onMenuShareAppMessage(obj)
+        wx.onMenuShareQQ(obj)
+        wx.onMenuShareQZone(obj)
     }
 
     // 按需加载jssdk资源
@@ -158,15 +158,15 @@ status: finished
        ...
        var info = response.info;
        if(/micromessenger/i.test(navigator.userAgent) ){
-           var _this = this;
-           // 确保分享的图片都是设置的图片，而不是微信默认抓取的
-           wx.ready(function(){
-               bindWxShare({
+         	var _this = this;
+           	// 确保分享的图片都是设置的图片，而不是微信默认抓取的
+           	wx.ready(function(){
+               	bindWxShare({
                    title: info.title,
                    link: window.location.href,
                    imgUrl: info.shareImg
-               })
-           });
+               	})
+           	});
        }
        ...
        ...
