--- a/papers/2014-11-19-关于papers脚手架工具.md
+++ b/papers/2014-11-19-关于papers脚手架工具.md
@@ -1,6 +1,23 @@
 ---
 title: 关于papers脚手架工具
 date: 2014-11-19
-status: todo
+status: finished
 author: jason82
 ---
+
+### 什么是papers
+
+可以通过`npm`安装：
+
+```sh
+npm i -S paper-mill
+```
+
+该模块是一个命令行工具，可以运行`papers`所拥有的命令，拥有两个方法：
+
+1. papers paper: 可以生成一个初始化的文章，运行该命令之后会询问你文章的标题、时间、作者，在输入时间和作者时工具会给出默认值。
+2. papers build: 会把文章发布到`README.md`文件内，并且可以通过传不同的`flags`来以不同的排序生成文章列表，还可以设置是否只发布标记为`finish[ed]`的文章。
+
+### 如何实现的
+
+`paper-mill`的命令行功能是通过`yargs`来解析的，以及依赖`inquirer`模块来实现询问功能，实现起来非常容易。
