update: add some command

--- a/papers/2015-01-20-UNIX下常用的命令.md
+++ b/papers/2015-01-20-UNIX下常用的命令.md
@@ -38,3 +38,7 @@ ls -al
 whoami
 
 cmd+shift+4+space
+
+`OS X`一般默认就已经安装了`ruby`，但是可以使用`homebrew`来更新`ruby`
+
+`ruby`有一个包管理工具`gem`，可以用来安装一些基于`ruby`的工具。例如`travis`就是一个。
