update: add some command

--- a/papers/2014-09-27-各种awesome列表.md
+++ b/papers/2014-09-27-各种awesome列表.md
@@ -1,6 +1,56 @@
 ---
 title: 各种awesome列表
 date: 2014-09-27
-status: todo
+status: finished
 author: jason82
 ---
+
+## CSS类
+
+ - [w3cplus](https://www.w3cplus.com/) 国内CSS3布道
+ - [animate.css](https://daneden.github.io/animate.css/) CSS3的animation动画仓库
+ - [tridiv](http://tridiv.com/) 基于CSS3的3D编辑器
+ - [csstriggers](https://csstriggers.com/) CSS属性渲染影响速查
+ - [hakimel-stroll](https://github.com/hakimel/stroll.js) CSS3实现的列表动画
+ - [hakimel-css](https://github.com/hakimel/css) CSS3实现的UI集合
+ - [Hover](https://github.com/IanLunn/Hover) PC端的hover效果
+ - [codrops](https://tympanus.net/codrops/) CSS相关效果的集合站点
+ - [css-effects](https://1stwebdesigner.com/css-effects/) CSS集合站点
+
+## 业务类
+
+
+## 工具类
+
+ - [any-api](https://any-api.com/) 快速查找api
+ - [shrink and compress](http://javascriptcompressor.com/) 快速查找api
+
+
+## WebGL类
+
+ - [webgl-h5](http://2017.makemepulse.com/) 极度细腻的h5
+
+## SVG类
+
+ - [free-icon](http://www.flaticon.com/) 免费的svg矢量icon
+ - [svg-demo](http://web.socialab.com.cn/static/coke128/index.html) svg案例
+
+## CANVAS类
+
+
+## 图形算法类
+
+ - [rory-blog](http://www.rorydriscoll.com/) 关于图形算法的博客
+
+## 代数算法类
+
+ - [linear-algebra](https://www.youtube.com/playlist?list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&app=desktop) 线性代数教程
+ - [bilibili-linear-algebra](http://www.bilibili.com/video/av6731067/) B站线性代数教程
+
+## 几何学类
+
+ - [boids](http://www.red3d.com/cwr/boids/) 鸟群仿生算法
+ - [trianglify](https://github.com/qrohlf/trianglify) 三角化
+ - [polygon-intersection](http://polyk.ivank.net/) 多边形相交检测
+
+## CONF & TALK
