update: rollup usage

--- a/papers/2016-06-10-rollup使用记录.md
+++ b/papers/2016-06-10-rollup使用记录.md
@@ -34,5 +34,35 @@ rollup index.js --format umd --name "JC" --output dist.js
 
 #### 其它用法
 
-`rollup`除了提供命令行的方式使用，还支持以配置文件的形式来使用
+`rollup`除了提供命令行的方式使用，还支持以配置文件的形式来使用。我们可以编写自己的`rollup`配置，就像下面这样：
+
+> ./builder/build.js
+
+```javascript
+import resolve from 'rollup-plugin-node-resolve';
+import commonjs from 'rollup-plugin-commonjs';
+import uglify from 'rollup-plugin-uglify';
+
+const production = process.env.PROD;
+
+export default {
+	entry: 'src/main.js',
+	dest: 'public/bundle.js',
+	format: 'iife', // immediately-invoked function expression — suitable for <script> tags
+	plugins: [
+		resolve(), // tells Rollup how to find date-fns in node_modules
+		commonjs(), // converts date-fns to ES modules
+		production && uglify() // minify, but only in production
+	],
+	sourceMap: true
+};
+```
+
+这样我们就可以使用`rollup`的命令来指定配置文件了
+
+```sh
+rollup -c ./builder/build.js
+```
+
+> 如果未指定有效的配置文件，`rollup`默认情况下会匹配`rollup.config.js`文件
 
