chore: status change

--- a/papers/2017-09-21-深入理解babel.md
+++ b/papers/2017-09-21-深入理解babel.md
@@ -1,7 +1,7 @@
 ---
 title: 深入理解babel
 date: 2017-09-21
-status: finish
+status: finished
 ---
 ## babel 
 基于最新的ECMAScript将JS编译成在各个平台、各种版本的浏览器上都能运行的代码。它是js编译器。
