feat(euler): add euler and matrix

--- a/papers/2015-02-15-欧拉角与矩阵.md
+++ b/papers/2015-02-15-欧拉角与矩阵.md
@@ -1,6 +1,31 @@
 ---
 title: 欧拉角与矩阵
 date: 2015-02-15
-status: todo
+status: finished
 author: jason82
 ---
+
+# 应用
+
+在三维空间中我们经常会使用`欧拉角`来表示一个刚体在空间内的旋转姿态，`欧拉角`又常分为静态和动态两类。
+- 静态：是指绕世界坐标系三个轴的旋转，由于物体旋转过程中坐标轴保持静止，所以称为静态
+- 动态：是指绕物体坐标系三个轴的旋转，由于物体旋转过程中坐标轴随着物体做相同的转动，所以称为动态
+
+`欧拉角`被运用在各种领域，如经典力学、量子力学领域。
+
+在我们的图形编程中常用到的都是动态的`欧拉角`描述，始终相对于自身的坐标系做旋转。
+
+![matrix](https://jasonchen1982.github.io/blog/source/math/euler.svg)
+
+图中右侧分别是绕X、Y、Z轴旋转的矩阵。
+
+结果运算之后得到
+
+![matrix](https://jasonchen1982.github.io/blog/source/math/euler2.svg)
+
+# 总结
+
+用欧拉角来描述刚体在空间内的姿态比较简单，但是这种方法在处理实际问题的时候会带来两个问题：
+
+- 万向节死锁：但出现旋转正负90度的时候，就会出现旋转轴的重叠，导致另外两个轴的旋转功能一致，描述的是同一个旋转
+- 线性球面插值：基于欧拉角的旋转不能做球面插值，特别是在处理照相机的时候
