--- a/papers/2016-06-10-rollup使用记录.md
+++ b/papers/2016-06-10-rollup使用记录.md
@@ -66,3 +66,7 @@ rollup -c ./builder/build.js
 
 > 如果未指定有效的配置文件，`rollup`默认情况下会匹配`rollup.config.js`文件
 
+### TODO: spacename
+
+### TODO: 一些问题 和 tree-shaking
+
