feat(ray-sphere): add ray sphere article

--- a/papers/2014-09-27-各种awesome列表.md
+++ b/papers/2014-09-27-各种awesome列表.md
@@ -24,6 +24,8 @@ author: jason82
 
  - [any-api](https://any-api.com/) 快速查找api
  - [shrink and compress](http://javascriptcompressor.com/) 快速查找api
+ - [graphing](https://www.geogebra.org/graphing) 图形计算器
+ - [regexper](https://regexper.com/) 正则可视化
 
 
 ## WebGL类
@@ -41,6 +43,9 @@ author: jason82
 ## 图形算法类
 
  - [rory-blog](http://www.rorydriscoll.com/) 关于图形算法的博客
+ - [scratchapixel](https://www.scratchapixel.com) ray-tracing相关技术
+ - [iq](http://www.iquilezles.org/) ray marching master
+ - [jamie-wong](http://jamie-wong.com/) some about graphics
 
 ## 代数算法类
 
